--- a/les3/static/houseUpdate.hbs
+++ b/les3/static/houseUpdate.hbs
@@ -11,7 +11,7 @@
 
 <h1>House Updating</h1>
 
-<form action="/updateHouse" method="post">
+<form action="/houses_update" method="post">
     <input type="text" name="id" placeholder="Enter your id">
     <input type="text" name="city" placeholder="Enter new city">
     <input type="text" name="street" placeholder="Enter new street">
