--- a/les3/static/login.hbs
+++ b/les3/static/login.hbs
@@ -11,14 +11,14 @@
 
 <h2>Log in</h2>
 
-<form action="/users_auth" method="post">
+<form action="/auth/users" method="post">
     <input type="text" name="login" placeholder="Your login"><br>
     <input name="email" placeholder="E-mail" type="text"><br>
     <input type="text" name="password"><br>
     <input type="submit" name="user">
 </form>
 
-<form action="/houses_auth" method="post">
+<form action="/auth/houses" method="post">
     <input type="text" name="street" placeholder="Street">
     <input type="submit" name="house">
 </form>
