--- a/les3/static/userUpdate.hbs
+++ b/les3/static/userUpdate.hbs
@@ -11,7 +11,7 @@
 
 <h1>User Updating</h1>
 
-<form action="/users_update" method="post">
+<form action="/users/update" method="post">
     <input type="text" name="id" placeholder="Enter your id">
     <input type="text" name="name" placeholder="Enter new name">
     <input type="text" name="email" placeholder="Enter new email">
