create new validator and detete unnecessary mdlwrs

--- a/les3/public/support.hbs
+++ b/les3/public/support.hbs
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-<button id="btn_to_room">Message to Support</button><br>
+<button id="btn_to_room">Message to Support</button>
+<br>
 <input type="text" id="name" placeholder="Enter your name" style="display: none"><br>
-<textarea id="message" cols="30" rows="10" placeholder="Hello, please, describe your problem" style="display: none"></textarea><br>
+<textarea id="message" cols="30" rows="10" placeholder="Hello, please, describe your problem"
+          style="display: none"></textarea><br>
 <button id="btn_send" style="display: none">Send</button>
 
 <script src="/socket.io/socket.io.js"></script>
