--- a/les3/public/support.hbs
+++ b/les3/public/support.hbs
@@ -37,14 +37,14 @@
     };
 
     btn_send.onclick = () => {
-        socket.emit('message', name.value, message.value)
+        socket.emit('message', {room_id: room_name.value, message: message.value, name: name.value})
     };
 
-    socket.on('chat', (name, data) => {
+    socket.on('chat', data => {
         const div = document.createElement('div');
 
         div.style.border = '2px solid green';
-        div.innerText = `User:${name} \n Message:${data}`;
+        div.innerText = `User:${data.name} \n Message:${data.message}`;
 
         document.body.appendChild(div);
         message.value = '';
